--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,10 @@ android {
     }
 }
 def room_version = "2.4.3"
+def anko_version="0.10.8"
 
 dependencies {
+
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
@@ -52,4 +54,7 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
+
+    // Anko Commons (para base de datos)
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 }
